src/style.css
body {
  padding: 0% 1.5%;
  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
}

h1 {
  font-size: 5rem;
  color: aliceblue;
  text-shadow: 1px 1px 2px rgba(228, 228, 228, 0.5);
}

h2 {
  font-size: 3rem;
  margin: 0%;
  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
}

.main-section {
  display: grid;
  grid-template-columns: 1fr 1fr;
  gap: 4%;
  padding: 0% 2%;
  background-color: rgba(240, 248, 255, 0.5);
}

.score-display {
  width: 80%;
  padding-left: 10%;
}

.top {
  display: flex;
  justify-content: space-between;
  align-items: center;
  height: 10%;
}

.display-box {
  height: 70%;
  overflow-y: scroll;
  border: 10px solid rgba(224, 224, 224, 0.2);
}

.refresh-scores {
  padding: 2% 4%;
  border: 4px solid rgb(100, 100, 100);
}

.score-list {
  padding: 1%;
}

.score-line {
  list-style: none;
  padding: 2%;
  font-weight: bold;
  display: grid;
  grid-template-columns: 2fr 1fr;
}

.score-line:nth-child(odd) {
  background-color: rgb(210, 210, 210);
}

.score-taker {
  margin-top: 1%;
}

.score-form {
  display: flex;
  flex-direction: column;
  width: 60%;
  margin-top: 3%;
}

.score-form > * {
  margin-bottom: 4%;
  padding: 2%;
  border: 4px solid rgb(100, 100, 100);
}

#submit {
  width: 20%;
  align-self: end;
}

#video-container video {
  z-index: -1;
}

@media screen and (max-width: 768px) {
  .main-section {
    grid-template-columns: 1fr;
    width: 130%;
  }
}

